# tripsniper

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
sqlalchemy/orm/: __init__.py
src/trip_sniper/: config.py  models.py  pipeline.py  scheduler.py
src/trip_sniper/fetchers/: __init__.py  amadeus.py  booking.py  skyscanner.py
src/trip_sniper/scoring/: steal_score.py
tests/: conftest.py  test_amadeus_fetcher.py  test_features.py  test_pipeline.py
