[tool.poetry]
name = "trip-sniper"
version = "0.1.0"
description = "Trip Sniper service"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "trip_sniper", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

